Checking in Luciano's modifications for LCLS build compatibility
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/trunk/lcls/epics/modules/diagTimer/current@25898 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/iocBoot/ioc/Makefile
+++ b/iocBoot/ioc/Makefile
@@ -12,4 +12,4 @@ COPY_SUBDIR=iocBoot/iocdiagTimer
 COPY_FILES=st.cmd
 
 include $(TOP)/configure/RULES.ioc
-include $(TOP)/configure/RULES.copy
+# include $(TOP)/configure/RULES.copy
